fix: remove get from path
